# lucide

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  download_lucide_icons.py  pyproject.toml  tox.ini
.github/workflows/: main.yml  update-icons.yml
requirements/: py310-django51.txt  py311-django51.txt  py312-django51.txt  py313-django50.txt  py313-django51.txt  py314-django51.txt
src/lucide/: __init__.py  _compat.py  aliases.json
src/lucide/templatetags/: lucide.py
tests/: test_django.py  test_jinja.py  test_lucide.py
